[gd_scene load_steps=11 format=2]

[ext_resource path="res://Topics/TheResistance.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Slinker.gd" type="Script" id=2]
[ext_resource path="res://Equipment/Insult.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Selected.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/EquipmentSlot.tscn" type="PackedScene" id=5]


[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 22.1859, -86.8645, 0, 0, 0, 0, 77.3547, -47.0592, 0, 0, 0, 0, 81.0734, -2.89676, 0, 0, 0, 0, 35.4977, 47.8246, 0, 0, 0, 0, 35.4977, 47.8246, 0, 0, 0, 0, -67.4151, 38.2684, 0, 0, 0, 0, -118.136, -30.0952, 0, 0, 0, 0, -65.2098, -86.6973, 0, 0, 0, 0, 20.7959, -86.6973 )
}

[sub_resource type="Animation" id=2]
resource_name = "Rotate"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 20.0625

[sub_resource type="CircleShape2D" id=4]
radius = 524.389

[sub_resource type="RayShape2D" id=5]
length = 816.838

[node name="Slinker" type="Node2D"]
script = ExtResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 23.631, -15 )
scale = Vector2( 1.33257, 1 )
polygon = PoolVector2Array( 10.4479, 18.0525, -18.899, 20.1475, -30.4282, 16.6558, -42.6152, 12.0143, -48.246, -5.69103, -18.899, 5.48239, 1.14499, -0.802658 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( -3.02847, -39.5867 )
amount = 2
explosiveness = 0.5
emission_shape = 1
emission_sphere_radius = 57.43
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 161.63

[node name="RayCastTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 20.7959, -86.6973 )
offset = 529.125

[node name="AnimationPlayer" type="AnimationPlayer" parent="Path2D/PathFollow2D"]
anims/Rotate = SubResource( 2 )

[node name="Selected" parent="Path2D/PathFollow2D" instance=ExtResource( 4 )]

[node name="Insult" parent="Path2D/PathFollow2D/Selected" instance=ExtResource( 3 )]
position = Vector2( -1.06596, 2.42575 )

[node name="TheResistance" parent="Path2D/PathFollow2D/Selected" instance=ExtResource( 1 )]
visible = false
position = Vector2( -36.6153, -2.09035 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -5.14566, -10.2913 )
shape = SubResource( 3 )

[node name="SensoryArea2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensoryArea2D"]
shape = SubResource( 4 )

[node name="SensoryRayCast2D" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
angular_damp = 0.0
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensoryRayCast2D"]
shape = SubResource( 5 )

[node name="EquipmentSlot" parent="." instance=ExtResource( 5 )]
position = Vector2( -0.698334, 2.09502 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="SensoryRayCast2D" to="." method="_on_SensoryRayCast2D_body_entered"]
